methods.returning.MethodsReturning.scala.error
Erreur de compilation :
MethodsReturning:6: error: Invalid literal number
  for (i <- 0to6)
            ^MethodsReturning:6: error: illegal start of simple expression
  for (i <- 0to6)
            ^MethodsReturning:28: error: ')' expected but '}' found.
} 
^